style: reduce z-index to stop overlap mini-cart

--- a/src/component/SignInSignupNudge/SignInSignupNudge.style.scss
+++ b/src/component/SignInSignupNudge/SignInSignupNudge.style.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   right: -68px;
   top: 20px;
-  z-index: 100;
+  z-index: 50;
   position: absolute;
 
   .nudge-content {
